number of connected clients

--- a/data/index.html
+++ b/data/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <footer class="nav-bg">
-            <div class="nav-icons-hero"></div>
+            <span></span>
         </footer>
         <script src="./app.js"></script>
     </div>
