Adding DNS Service

--- a/data/index.html
+++ b/data/index.html
@@ -36,7 +36,7 @@
         </footer>
     </div>
 </body>
-<!-- <script>
+<script>
     var xhr = new XMLHttpRequest();
     xhr.open("GET", "/app.js", true);
     xhr.setRequestHeader("X-Page-Source", "html");
@@ -48,6 +48,5 @@
       }
     };
     xhr.send();
-  </script> -->
-  <script src="./app.js"></script>
+  </script>
 </html>
